docs: swagger 오타 수정
