# backend/internal/gateway/http/handler/restapi/write/write.go
@@ -512,7 +512,7 @@ func (h *WriteHandler) SendNoteToRandomUser(c *gin.Context) {
 // @Security	 BasicAuth
 // @Param        uid  query     string  false  "user id"
 // @Param        nid  query     string  false  "note id"
-// @Success      200  {object}  restapi.DefaultResponse ""
+// @Success      200  {object}  restapi.NoteInfo ""
 // @Failure      400  {object}  restapi.Response400 "요청에 포함된 파라미터 값이 잘못된 경우입니다"
 // @Failure		 401  {object}  restapi.Response401 "인증에 실패한 경우이며, 실패 사유가 전달됩니다"
 // @Failure      404  {object}  restapi.Response404 "요청한 리소스가 서버에 존재하지 않는 경우입니다"
